fixed open event item overflow

--- a/event_map/static/css/main.css
+++ b/event_map/static/css/main.css
@@ -42,20 +42,21 @@ body{
     position: relative;
     top: 6px;
     left: 3px;
-    width: 99%;
+    white-space: nowrap;
+    width: 100%
 }
 .list_item_content{
     background: rgba(255, 255, 2555, 0.89);
     padding: 3px;
     float:left; 
-    position: relative;
+    white-space: nowrap;
+    
 }
 .openIndt{
     float:left; 
     position: relative; 
     padding:2px 3px 0px 3px;
     width: 17px;
-    margin-right: 3px;
 }
 .verticalMonth{
     margin-top: -17px;
@@ -84,7 +85,12 @@ h2{
 .timePlace{
     overflow: hidden;
 }
-.list_item_content{
-    width: 376px;
-    white-space: nowrap;
+.list_item_width{
+    float: left;
+    width: 92%;
+    overflow: hidden;
+}
+
+.event_item .open{
+
 }
